logs/p01.stemmer.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/guess_language'...
Listing './lib/python3.5/site-packages/guess_language/trigrams'...
Listing './lib/python3.5/site-packages/guess_language-0.2.egg-info'...
Listing './lib/python3.5/site-packages/p01'...
Listing './lib/python3.5/site-packages/p01/stemmer'...
Listing './lib/python3.5/site-packages/p01/stemmer/data'...
Listing './lib/python3.5/site-packages/p01/stemmer/data/rslp'...
Listing './lib/python3.5/site-packages/p01/stemmer/data/stopwords'...
Compiling './lib/python3.5/site-packages/p01/stemmer/performance.py'...
***   File "./lib/python3.5/site-packages/p01/stemmer/performance.py", line 282
    print "repeat %i times" % repeatTimes
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/p01/stemmer/stemmer.py'...
***   File "./lib/python3.5/site-packages/p01/stemmer/stemmer.py", line 187
    raise ValueError, "The rule %s is invalid" % rule
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/p01.stemmer-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
